--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -46,7 +46,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css?v={{timestamp}}" />
-    <title>Spectrum Guide</title>
+    <title>Spectrum's AI Guide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
