--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css?v={{timestamp}}" />
-    <title>Spectrum's AI Guide</title>
+    <title>Spectrum's Guide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
